revision game.html

--- a/TypeScriptHTMLApp1/game.html
+++ b/TypeScriptHTMLApp1/game.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 <head>
@@ -11,12 +11,33 @@
     <h1>空腹夜行</h1>
     <canvas id="canvas1" width="480" height="432"></canvas><br /><br />
     <a id="tweetbutton"><img src="tweetbutton.png"></a><br />
-    <a>※ツイート内容はタイトル画面に戻ると更新されます。</a>
+    ※ツイート内容はタイトル画面に戻ると更新されます。
     <hr>
     <h2>操作方法</h2>
-    <a>Z　…　決定、上昇<br>X　…　キャンセル<br>P　…　ポーズ、ポーズ解除<br>↑　…　上昇<br>←→　…　項目の選択、左右移動</a>
+    Z　…　決定、上昇<br>
+    X　…　キャンセル<br>
+    P　…　ポーズ、ポーズ解除<br>
+    ↑　…　上昇<br>
+    ←→　…　項目の選択、左右移動
+    <hr>
+    <h2>コメント</h2>
+    <a href="https://github.com/umomaou/kuhukuyako" target="_blank">オープンソース</a>だったりします。<br>
+    <br>
+    東方projectの二次創作、そして某エイリアン収集ゲームのとあるミニゲームのパロディです。<br>
+    DXライブラリで1週間で作ったゲームの移植・バグ修正版です。<br>
+    難易度は結構きつめで4万点取れたら大したもの。<br>
+    TypeScriptの勉強がてらの移植でしたが、生のjavascriptの5倍は書き易かったです（個人の感想です）。もうあれには戻れない…。<br>
     <hr>
     <h2>注意書き</h2>
-    <a>ブラウザ対応状況は以下の通りです。（2015/08/20更新）<br><br>InternetExplorer　…　最新版（11.0.22）で動作確認。一部音声が正常に再生されない場合があります。また、つぶやくボタンでツイートが出来ません。<br>Chrome　…　最新版（44）で動作確認。大体正常に動作します。<br>Firefox　…　最新版（40.0.2）で動作確認。処理がやや重たい場合があるようです。<br>Opera　…　最新版（31.0）で動作確認。一番安定して動作する気がします。</a>
+    ブラウザ対応状況は以下の通りです。（2015/08/20更新）<br>
+    <br>
+    InternetExplorer　…　最新版（11.0.22）で動作確認。一部音声が正常に再生されない場合があります。また、つぶやくボタンでツイートが出来ません。<br>
+    Chrome　…　最新版（44）で動作確認。大体正常に動作します。<br>
+    Firefox　…　最新版（40.0.2）で動作確認。処理がやや重たい場合があるようです。<br>
+    Opera　…　最新版（31.0）で動作確認。一番安定して動作する気がします。
+    <hr>
+    <h2>製作</h2>
+    プログラム・一部グラフィック：　umo<br>
+    グラフィック・サウンド：　<a href="http://kinoko920.blog60.fc2.com/" target="_blank">きのこ↑</a>
 </body>
 </html>
