--- a/TypeScriptHTMLApp1/game.html
+++ b/TypeScriptHTMLApp1/game.html
@@ -21,12 +21,9 @@
     ←→　…　項目の選択、左右移動
     <hr>
     <h2>コメント</h2>
-    <a href="https://github.com/umomaou/kuhukuyako" target="_blank">オープンソース</a>だったりします。<br>
-    <br>
     東方projectの二次創作、そして某エイリアン収集ゲームのとあるミニゲームのパロディです。<br>
     DXライブラリで1週間で作ったゲームの移植・バグ修正版です。<br>
-    難易度は結構きつめで4万点取れたら大したもの。<br>
-    TypeScriptの勉強がてらの移植でしたが、生のjavascriptの5倍は書き易かったです（個人の感想です）。もうあれには戻れない…。<br>
+    難易度は難しめで4万点取れたら大したもの。<br>
     <hr>
     <h2>注意書き</h2>
     ブラウザ対応状況は以下の通りです。（2015/08/20更新）<br>
